samples/_failures_safe/1761472558_d6c2b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cd78663.c: In function ‘print_compression_stats’:
./samples/SAFE/__tmp_8cd78663.c:141:54: error: expected ‘)’ at end of input
  141 |     printf("Checksum: 0x%02X\n", ctx->header.checksum
      |           ~                                          ^
      |                                                      )
./samples/SAFE/__tmp_8cd78663.c:141:5: error: expected declaration or statement at end of input
  141 |     printf("Checksum: 0x%02X\n", ctx->header.checksum
      |     ^~~~~~
